<resources>
    <string name="app_name">Serere</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="otra_cuenta">Conectate por <b>Facebook</b> o <b>Google+</b></string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cliente Serere</string>
    <string name="nav_header_subtitle">cliente@serere.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sql_pedido">Carrito</string>
    <string name="sql_loquesea">loquesea</string>
    <string name="sql_ubicacion">ubicacion</string>
    <string name="mis_datos">mis_datos</string>
    <string name="home_second">Home Second</string>
    <string name="servidor_web">http://35.194.59.205/master/</string>
    <string name="servidor">http://35.194.59.205/master2/</string>
    <string name="GPSAlertDialogTitle">Locatización</string>
    <string name="GPSAlertDialogMessage">El servicio de Localización esta desabilitado</string>
    <string name="location">Locatización</string>
    <string name="location_desc">
El permiso de ubicación es necesario para mostrar su ubicación actual, ¿le gustaría reconsiderar?</string>
    <string name="facebook_app_id">370233200129713</string>
    <string name="fb_login_protocol_scheme">fb370233200129713</string>
    <string name="olvidate"><u>Olvidaste mi contraseña</u></string>
    <string name="condiciones"><u>Terminos y Condiciones de uso</u></string>
    <string name="nombre_sql">pedido</string>
    <string name="title_activity_productos">Productos</string>
    <string name="title_activity_detalle_carrito">Detalle Carrito</string>
    <string name="title_activity_producto_principal">Producto Principal</string>
    <string name="nombre">Nombre</string>
    <string name="menu_nuevo_negocio">Nuevo Negocio</string>
    <string name="menu_registrate">Registrate</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_historial">Historial</string>
    <string name="menu_compartir">Compartir</string>
    <string name="menu_perfil">Perfil</string>
    <string name="title_activity_menu_movil">Menu_movil</string>
    <string name="title_activity_registrar_usuario">Registrar_usuario</string>
    <string name="latitud_vallegrande">-18.488317</string>
    <string name="longitud_vallegrande">-64.105268</string>
    <string name="title_activity_historial_pedido">Map</string>
    <string name="title_activity_notificacion_pedido_movil">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pedido_usuario">Map</string>
    <string name="title_activity_otra_direccion">Otra_direccion</string>
    <string name="url_pagina">https://www.facebook.com/GougoPassenger/</string>
    <string name="title_activity_historial">Historial</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_notificacion_pedido_cancelo">Notificacion_pedido_cancelo</string>
    <string name="title_activity_pedido_usuario_2">Pedido_usuario_2</string>
    <string name="title_activity_compartir_principal">Compartir_principal</string>
    <string name="title_activity_buscar_usuario">Buscar_usuario</string>
    <string name="title_activity_compartir_desde_pedido">Compartir_desde_pedido</string>
    <string name="title_activity_panico_principal">Panico_principal</string>
    <string name="title_activity_buscar_usuario_panico">Buscar_usuario_panico</string>
    <string name="sending_sms">Enviaremos un sms de confirmacion al siguiente numero</string>
    <string name="inprogress">Verificacion en proceso</string>
    <string name="verified">Verificacion Exitosa</string>
    <string name="failed">Verificacion Fallida</string>
    <string name="sms_enter_code">Porfavor ingresa el codigo sms</string>
    <string name="title_activity_main_lista_carrera_compartida">Main_lista_carrera_compartida
    </string>
    <string name="title_activity_carreras_recorrido_usuario">Carreras_recorrido_usuario</string>
    <string name="title_activity_ver_carrera_compartida">Ver_carrera_compartida</string>
    <string name="title_activity_registrar_tarjeta">Registrar_tarjeta</string>
    <string name="title_activity_notificacion_panico">Notificacion_panico</string>
    <string name="title_activity_menu_video">Menu_video</string>
    <string name="title_activity_datos_contacto_panico">Datos_contacto_panico</string>
    <string name="title_activity_empresa_radio_taxi">Empresa_radio_taxi</string>
    <string name="title_activity_perfil_pasajero">Perfil del Pasajero</string>
    <string name="title_activity_perfil_pasajero_compartido">Perfil del Pasajero</string>
    <string name="title_activity_perfil_conductor_compartido">Perfil del conductor</string>
    <string name="title_activity_empresa">Empresa</string>
    <string name="title_activity_usuarios_empresa">Lista de usuarios</string>
    <string name="title_activity_usuarios_buscar">Buscar usuario</string>
    <string name="title_activity_guia_comercial">Guia Comercial</string>
    <string name="title_activity_guia_comercial_catergoria">Guia Comercial</string>
    <string name="title_activity_mapa_comercial">Map</string>
    <string name="title_activity_reservar_movil">Reservar un Taxi</string>
    <string name="title_activity_historial_reserva">Mis Reservas</string>
    <string name="title_activity_datos_vehiculo">Datos del vehículo</string>
    <string name="title_activity_calcular__tarifa">Calcular tarifa</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_detalle_reserva">Mi reserva</string>
    <string name="title_activity_tarifa">Tarifa</string>
    <string name="title_activity_registrar_usuario_facebook">Registrate en Taxi GouGo</string>
    <string name="taxi_normal">TAXI NORMAL</string>
    <string name="taxi_lujo">SOLICITAR TAXI</string>
    <string name="taxi_con_aire">TAXI CON AIRE</string>
    <string name="taxi_con_maletero">TAXI VAGONETA</string>
    <string name="taxi_delivery">DELIVERY</string>
    <string name="taxi_con_parrilla">CON PARRILLA</string>
    <string name="taxi_camioneta">CAMIONETA</string>
    <string name="moto">MOTO TAXI-ENCARGO</string>
    <string name="whatsapp">+59170007550</string>
    <string name="telefono">33467171</string>
    <string name="version_sql">1</string>
    <string name="nombre_carpeta">Serere</string>
    <string name="correo">radiomovil.master.norte@gmail.com</string>
    <string name="pagina">https://www.facebook.com/pg/MasterNorte</string>
    <string name="direccion">Av. Paragua entre 3ro y 4to anillo C/Lorenzo Davila #3460 Esq. Pedro Galvez</string>
    <string name="title_activity_opcion_inicio_sesion">Opcion_inicio_sesion</string>
    <string name="title_activity_actualizar_celular">Actualizar # de celular</string>
    <string name="title_activity_confirmar_sms_celular">Confirmar codigo</string>
    <string name="mensaje_registro">Al dar clic en <b>Siguiente</b> se estará registrado en nuestra base de datos y aceptando los términos y condiciones de uso.</string>
    <string name="finalizo">finalizo</string>
    <string name="detalle1">Ya sea que hayas olvidado una llave en casa o necesites alguna otra cosa, tu solo pide Yo lo Serere, Serere te da facilidad de pedir cualquier cosa que necesites son necesidad de moverte. Elige cuando pedir y donde recibir el pedido.</string>
    <string name="detalle2">¿Necesitas generar más ganancias aparte de tu trabajo regular? En Serere, como Socio Conductor, tienes la libertad y flexibilidad para conducir cuando quieras. Así, nunca te perderás los momentos importantes de tu vida.</string>
    <string name="detalle3">Entrenamos a nuestros conductores adecuadamente y hacemos una revisión (incluyendo quejas y reclamos) para asegurarnos de que solo aquellos que tengan las mejores habilidades hagan parte de nuestro equipo.</string>
    <string name="informacion">Serere es la aplicación de pedidos más descargada. La aplicación conecta a los clientes y conductores, permitiéndoles experimentar una nueva experiencia. Serere está disponible para dispositivos Android</string>
    <string name="title_activity_lugar_empresa">Lugar_empresa</string>
    <string name="large_text"> </string>
    <string name="title_activity_pagina">Pagina</string>
    <string name="title_activity_billetera">Billetera</string>
    <string name="title_activity_compartir_amigo">Compartir</string>
    <string name="title_activity_foto_producto">Foto_producto</string>
    <string name="title_activity_lista__productos">Lista_Productos</string>
    <string name="informacion_compartir">Comparte a tus amigos para probar GouGo. Obtendrás bonos en tu billetera para que puedas usar en tus proximas carreras.</string>
    <string name="google_key_api">AIzaSyAxlRWvi3uKsjYi6N0LOiLOz-PVNJ5K8Tg</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_actualizar_celular_2">Actualizar celular</string>
    <string name="title_activity_menu_desaparecidos">Desaparecidos</string>
    <string name="title_activity_perfil_desaparecido">Perfil del desaparecido</string>
    <string name="dato_desaparecido">Ayudanos a encontrar a estas personas.</string>
    <string name="title_activity_pedido_ya">Pedilo Ya!</string>
    <string name="title_activity_menu__categoria_pedido">Categoria</string>
    <string name="title_activity_empresa_pedido">Empresas</string>
    <string name="title_activity_producto_pedido">Productos</string>
    <string name="title_activity_lista_pedido_confirmar">Carrito de pedido</string>
    <string name="title_activity_lugar_pedido">Empresa</string>
    <string name="title_activity_delivery_pendiente">Delivery Pendiente</string>
    <string name="title_activity_menu_lugar">Mi Negocio</string>
    <string name="title_activity_delivery_en_proceso">Delivery en proceso</string>
    <string name="title_activity_producto_editar">Producto</string>
    <string name="title_activity_detalle_pedido">Lista de Carrito</string>
    <string name="title_activity_productos_lugar">Productos</string>
    <string name="title_activity_delivery_completado">Delivery completado</string>
    <string name="hola_que_necesitas">Hola ¿Que necesitas?</string>
    <string name="si_cabe_en_la_caja_de_la_moto_lo_podemos_llevar">Si cabe en la caja de la moto te lo podemos llevar!</string>
    <string name="siguiente_lqs">Siguiente</string>
    <string name="escribe_aqui_lo_que_necesitas">Escribe aquí lo que necesitas...</string>
    <string name="necesito">TU PEDIDO</string>
    <string name="direccion_de_recoleccion">DIRECCION DE RECOLECCION</string>
    <string name="aqui_lo_que_necesitas">aqui lo que necesitas</string>
    <string name="donde_lo_buscamos">Donde lo buscamos?</string>
    <string name="direccion_de_entrega">DIRECCION DE ENTREGA</string>
    <string name="donde_lo_entregamos">Mi ubicación en tiempo real</string>
    <string name="precio_estimado_del_envio">Precio estimado del envío.</string>
    <string name="nota_el_precio_de_los_productos_no_esta_incluido">Nota: El precio de los productos no esta incluido...</string>
    <string name="nota_direccion_de_entrega">Nota: La dirección de entrega es tu ubicación.</string>
    <string name="confirmar_compra">Confirmar</string>
</resources>