<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView

                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/titillium"
                android:text="@string/necesito"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lo_que_necesitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/aqui_lo_que_necesitas"
                android:lines="20"
                android:minLines="5"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textColor="@color/colorIcons"
                android:textSize="18sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/titillium"

                android:text="@string/direccion_de_recoleccion"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_direccion_recoger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sultan_nahia"
                android:textSize="22sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/donde_lo_buscamos"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:gravity="center"
                android:drawableRight="@mipmap/ic_action_name"
                android:drawableLeft="@mipmap/ic_punto_fin_1" />
            <TextView
                android:id="@+id/tv_punto_negocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:text="latitud,longitud"
                android:gravity="center"  />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/titillium"


                android:text="@string/direccion_de_entrega"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nota_direccion_de_entrega"
                android:gravity="center"
                android:textColor="@color/color_rojo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_direccion_entrega"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:autofillHints=""
                android:fontFamily="@font/sultan_nahia"
                android:textSize="22sp"
                android:drawableRight="@mipmap/ic_action_name"
                android:drawableLeft="@mipmap/ic_point1"
                android:ems="10"
                android:hint="@string/donde_lo_entregamos"
                android:textColor="#000000"
                android:inputType="textPersonName"
                android:gravity="center"
                android:drawableEnd="@mipmap/ic_action_name"
                android:drawableStart="@mipmap/ic_point1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/cardview"
                android:elevation="10dp"

                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"

                    android:layout_marginRight="15sp"
                    android:fontFamily="@font/titillium"
                    android:text="@string/precio_estimado_del_envio"
                    android:gravity="center"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView

                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:foregroundGravity="left"
                            android:layout_marginLeft="20sp"
                            android:padding="2sp"
                            app:srcCompat="@drawable/motito" />

                        <TextView
                            android:id="@+id/tv_monto_envio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:fontFamily="@font/sultan_nahia"
                            android:text="8.00 Bs" />

                    </LinearLayout>
                    <TextView
                        android:layout_width="1sp"
                        android:layout_height="match_parent"
                        android:background="#757575"
                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">



                        <TextView
                            android:id="@+id/tv_tiempo_preparacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10sp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:fontFamily="@font/sultan_nahia"
                            android:textSize="18sp"
                            android:text="10-20 min" />

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"

                            android:layout_marginRight="20sp"
                            android:padding="2sp"
                            app:srcCompat="@drawable/cronometrito" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nota_el_precio_de_los_productos_no_esta_incluido"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />




            </LinearLayout>





            <Button
                android:id="@+id/bt_siguiente"
                style="@style/submit_positivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:layout_marginTop="16dp"
                android:onClick="Regresar"
                android:text="@string/confirmar_compra"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>