<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_informacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".informacion.Informacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email: edgarq354@gmail.com"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:layout_marginTop="50sp"
                android:src="@drawable/ic_logo_max"
                android:layout_marginBottom="30sp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Que es Traigo?"
                android:textStyle="bold"
                android:paddingLeft="10sp"
                android:textColor="@color/secondary_text"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/informacion"
                android:padding="10sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pide lo que quieras"
                android:textStyle="bold"
                android:paddingLeft="10sp"
                android:textColor="@color/secondary_text"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/detalle1"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="10sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sin oficina ni jefes"
                android:textStyle="bold"
                android:paddingLeft="10sp"
                android:textColor="@color/secondary_text"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/detalle2"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="10sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nuestros conductores"
                android:textStyle="bold"
                android:paddingLeft="10sp"
                android:textColor="@color/secondary_text"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/detalle3"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingBottom="10sp"
                />


            <Button
                android:id="@+id/pagina"
                style="@style/submit_positivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="7sp"
                android:text="Sobre nosotros"
                android:textSize="15sp"
                android:paddingLeft="10sp"/>

            <Button
                android:id="@+id/terminos"
                style="@style/submit_positivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Terminos y condiciones"
                android:textSize="15sp"
                android:layout_margin="7sp"
                android:paddingLeft="10sp"/>


        </LinearLayout>

    </ScrollView>
</FrameLayout>
